<resources>
    <string name="app_name">Mi Contacto</string>

    <string name="form_title">Datos Contacto</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configuración</string>
    <string name="form_name">Nombre completo</string>
    <string name="form_phone">Teléfono</string>
    <string name="form_email">Email</string>
    <string name="form_birthdate">Fecha de Nacimiento</string>


    <string name="form_button_next">Siguiente</string>
    <string name="form_description">Descripción Contacto</string>
    <string name="title_activity_detalle_contacto">Confirmar Datos</string>

    <string name="show_confirm">Confirmar Datos</string>
    <string name="show_birthdate_text">Fecha Nacimiento:</string>
    <string name="show_phone_label">Tel:</string>
    <string name="show_email_label">Email:</string>

    <string name="show_description_label">Descripción:</string>
    <string name="show_btn_edit">Editar Datos</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
